date_time_slot changes

--- a/templates/bookings/booking_public_view.html
+++ b/templates/bookings/booking_public_view.html
@@ -107,7 +107,7 @@
         <div class="mb-4">
             <h6 class="fw-bold mb-2">Schedule Details</h6>
             <p class="mb-0"><strong>Date:</strong> {{ booking.scheduled_date|date:"d M, Y" }}</p>
-            <p class="mb-0"><strong>Time:</strong> {{ booking.scheduled_time }}</p>
+            <p class="mb-0"><strong>Time:</strong> {{ booking.scheduled_time_slot }}</p>
         </div>
 
         <!-- Items Table -->
