--- a/templates/emails/booking_updated.html
+++ b/templates/emails/booking_updated.html
@@ -110,7 +110,7 @@
         </tr>
         <tr>
           <th>Scheduled Time</th>
-          <td>{{ booking.scheduled_time }}</td>
+          <td>{{ booking.scheduled_time_slot }}</td>
         </tr>
         {% if remarks %}
         <tr>
